background fixed attempt 2 on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@ body:before {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(photos/2452.jpg) no-repeat center center;
+    background: url("https://i.imgur.com/fvVLP9j.png") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
